<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="umengChannelGoogle">google</string>
    <string name="umengChannelAppchina">appchina</string>
    <string name="umengChannelBaidu">baidu</string>
    <string name="umengChannel360">360</string>
    <string name="umengChannelWandoujia">wandoujia</string>
    <string name="umengChannel91">91</string>
    <string name="umengChannelGfan">gfan</string>
    <string name="umengChannelCoolchuan">coolchuan</string>
    <string name="umengChannelWebPortal">WebPortal</string>
    <string name="umengChannelDev">dev</string>

    <string name="app_name">营养膳食指南</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="back">后退</string>
    <string name="nextStep">下一步</string>
    <string name="prevStep">上一步</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="saved">已保存</string>
    
    <string name="create">新建</string>
    
    <!-- 
    <string name="add">添加</string>
     -->
    <string name="title_diagnose">诊断</string>
    <string name="title_foodCombinationList">清单</string>
    <string name="title_nutrients">营养</string>
    <string name="title_searchfood">食物</string>
    <string name="title_userinfo">个人</string>
    <string name="title_setting">设置</string>
    
    <string name="tabCaption_health_maintenance">养生</string>
    <string name="tabCaption_history">历史</string>
    <string name="tabCaption_graph">曲线</string>
    <string name="tabCaption_encyclopedia">百科</string>
    <string name="tabCaption_info">信息</string>
    
    <string name="title_addfood_tolist_ornew">添加食物</string>
    <string name="title_food_combination">营养搭配</string>
    <string name="title_search_food">食物</string>
    
    <string name="diseaseGroupList">疾病组名清单</string>
    <string name="diseaseNameList">疾病清单</string>
    <string name="nutritionDiagnose">营养诊断</string>
    <string name="checkAgain">重新测试</string>
    <string name="recommendFood">推荐食物</string>
    

    <string name="inputFoodAmount">输入食物数量(g)</string>
    
    <string name="searchFood">搜索食物</string>
    <string name="searchFoodHint">快速查找食物</string>
    <string name="inputFoodNamePart">输入食物部分名称</string>
    
    <string name="youChosenDiseaseItems">您所选的项目</string>
    <string name="youNeededNutrients">您需要补充的营养元素</string>
    <string name="weCanRecommend1InSum">我们可以继续为您推荐富含以上营养元素的食物</string>
    
    <string name="chooseRichFood">以下是富含%s的食物和每日推荐量</string>
    <string name="v3_chooseRichFood">以下是富含%s的食物和每日推荐量</string>
    <string name="chooseNutrientsExplain">哪些营养素是您重点关注且是不能缺少的，请选择：</string>
    
    <string name="noFoodCombinationListForNow">暂无膳食清单</string>
    <string name="suggestToMakeFoodCombination">制定适合您的口味的每日膳食搭配，保证每日全面丰富的营养。</string>
    
    <string name="addToNewFoodCombination">添加到新清单</string>
    <string name="addToExistFoodCombination">添加到已有的清单</string>
    
    <string name="defaultFoodCollocationName">%s的饮食计划</string>
    
    <string name="calculating">计算中...</string>
    <string name="alreadyChooseEnoughFoodAndNeedToDelete">已有的这组食物搭配已经能够满足您所关注的营养需要，如需另行推荐，您可以删掉一些食物再使用推荐功能。</string>
    
    
    <string name="basicInfo">基本信息</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age">年龄</string>
    <string name="ageUnit">岁</string>
    <string name="height">身高</string>
    <string name="heightUnit">cm</string>
    <string name="weight">体重</string>
    <string name="weightUnit">kg</string>
    <string name="activeLevel">活动强度</string>
    <string name="activeLevelLight">轻</string>
    <string name="activeLevelMiddle">中等</string>
    <string name="activeLevelStrong">强</string>
    <string name="activeLevelVeryStrong">很强</string>
    <string name="nutritionDRI">个人每日营养摄入推荐量</string>
    
    <string name="alertSetting">提醒设置</string>
    
    <string name="DiseaseTimeTypeDescription_morning">上午诊断</string>
    <string name="DiseaseTimeTypeDescription_afternoon">下午诊断</string>
    <string name="DiseaseTimeTypeDescription_night">睡前诊断</string>
    <string name="diagnoseResult">诊断结果</string>
    <string name="goToDiagnose">去诊断</string>
    <string name="diagnoseTimeIsUp">诊断时间到了</string>
    <string name="timeDiagnoseTitle_morning">从早晨到现在，您有下列哪些状况？</string>
    <string name="timeDiagnoseTitle_afternoon">午饭后到现在，您有下列哪些状况？</string>
    <string name="timeDiagnoseTitle_night">晚饭后到现在，您有下列哪些状况？</string>
    <string name="diseaseMarkComment_good">恭喜，您现在的身体很健康！</string>
    <string name="diseaseMarkComment_normal">恭喜，您现在的身体比较健康！</string>
    <string name="diseaseMarkComment_bad">抱歉，您现在的身体比较糟糕！</string>
    
    <string name="iKnow">知道了</string>
    
    <string name="feedback">意见反馈</string>
    <string name="feedbackEmailTitle">用户意见反馈</string>
    <string name="feedbackEmailChooseSender">选择邮件发送程序：</string>

    <string name="ActivityLevelDescription0">每日仅做一些轻度运动，如散步，购物，做家务等。</string>
    <string name="ActivityLevelDescription1">每日做大概30分钟中等运动，如快速步行，平地骑车，跳交谊舞等。</string>
    <string name="ActivityLevelDescription2">每日做大概60分钟中等运动；或30分钟的强度运动，如中速跑步，爬山，打羽毛球等。</string>
    <string name="ActivityLevelDescription3">每日做大概45~60分钟的剧烈运动，如快跑，游泳，打篮球等。</string>
    

</resources>
