<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSectionTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youChosenDiseaseItems"
                android:textColor="@color/font_blue" />
	
		    <TextView
		        android:id="@+id/tvDiseases"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:minLines="3"
		        android:text="@string/hello_world"
		        android:textColor="@color/font_blue" />
	
		    <TextView
		        android:id="@+id/tvSectionTitle2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/youNeededNutrients"
		        android:textColor="@color/font_blue" />
	
		    <TextView
		        android:id="@+id/tvNutrients"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:minLines="2"
		        android:text="@string/hello_world"
		        android:textColor="@color/font_blue" />
		    
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical" 
            >
		    <TextView
		        android:id="@+id/tvSectionTitle3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/weCanRecommend1InSum" />
	        <Button
	            android:id="@+id/btnButton1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/recommendFood" />
        </LinearLayout>

</LinearLayout>

