<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/background_2x"
    >

    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    
	    android:orientation="vertical" >
	
		<include android:id="@+id/topbarPart" layout="@layout/topbar" />
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="0"
		    >
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
			    android:orientation="horizontal"
			    android:layout_margin="5dp"
			    >
		        <ImageView
		            android:id="@+id/imageView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_weight="0"
		            android:src="@drawable/basic_info_icon_2x" />
			    <TextView
			        android:id="@+id/tvBasicInfo"
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:layout_gravity="center_vertical"
			        android:layout_marginLeft="10dp"
			        android:gravity="center_vertical"
			        android:layout_weight="1"
			        android:text="@string/basicInfo"
			        android:textColor="@color/black"
			        android:textStyle="bold" />
			    <!-- 
			    想去掉下面文本框的焦点不行。虽然可以不弹键盘了。
			    -->
			    <EditText
			        android:id="@+id/etAboutFocusAndKeyboard"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_weight="1"
			        android:ems="10"
			        android:gravity="center_vertical|right"
			        android:inputType="number"
			        android:text="123"
			        android:visibility="invisible" >
			        <requestFocus />
			    </EditText>

			</LinearLayout>
			
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="5dp"
		        
		        >
			    <RadioGroup
			        android:id="@+id/radioGroupSex"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:fadingEdge="none"
			    	android:orientation="horizontal"
			        >
		
				    <RadioButton
				        android:id="@+id/rbMale"
				        android:layout_width="match_parent"
				        android:layout_height="50dp"
	
				        android:layout_weight="1"
				        android:background="@drawable/radio_astab_left_bg"
				        android:button="@null"
				        android:checked="true"
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/male"
				        android:textColor="@color/radio_astab_changecolor"

				         />
	
				    <!-- 
				    android:background="@drawable/corners_row"
				    
				    android:button="@color/transparent"
				    -->
		
				    <RadioButton
				        android:id="@+id/rbFemale"
				        android:layout_width="match_parent"
				        android:layout_height="50dp"
	
				        android:layout_weight="1"
				        android:background="@drawable/radio_astab_right_bg"
				        android:textColor="@color/radio_astab_changecolor" 
				        android:button="@null"
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/female" />
	
				</RadioGroup>
			</LinearLayout>
			
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/corners_row"
		        android:orientation="horizontal" 
		        android:layout_margin="5dp"
		        >
	
			    <TextView
			        android:layout_width="60dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/age" 
			        />
	
			   <EditText
			       android:id="@+id/etAge"
			       android:layout_width="match_parent"
			       android:layout_height="wrap_content"
			       android:layout_gravity="center_vertical"
			       android:layout_weight="1"
			       android:ems="10"
			       android:gravity="center_vertical|right"
			       android:inputType="number"
			       android:text="123" >
	
			    </EditText>
			    
			    <TextView
			        android:layout_width="40dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/ageUnit" />
			</LinearLayout>
			
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/corners_row"
		        android:orientation="horizontal" 
		        android:layout_margin="5dp"
		        >
			    <TextView
			        android:layout_width="60dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/height" />
	
			    <EditText
			        android:id="@+id/etHeight"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:ems="10"
			        android:gravity="center_vertical|right"
			        android:inputType="number"
			        android:text="123" >
			    </EditText>
			    
			    <TextView
			        android:layout_width="40dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/heightUnit" />
			</LinearLayout>
			
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/corners_row"
		        android:orientation="horizontal" 
		        android:layout_margin="5dp"
		        >
			    <TextView
			        android:layout_width="60dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/weight" />
	
			    <EditText
			        android:id="@+id/etWeight"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:ems="10"
			        android:gravity="center_vertical|right"
			        android:inputType="number"
			        android:singleLine="true"
			        android:imeOptions="actionDone"
			        android:text="123" >
			    </EditText>
	
			    <TextView
			        android:layout_width="40dp"
			        android:layout_height="40dp"
			        android:layout_weight="0"
			        android:gravity="center_vertical|center_horizontal"
			        android:text="@string/weightUnit" />
	
			</LinearLayout>
			
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
	
		        android:orientation="horizontal" 
			    >
	
		        <TextView
			        android:id="@+id/tvActiveLevel"
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:layout_gravity="center_vertical"
			        android:layout_marginLeft="10dp"
			        android:gravity="center_vertical"
			        android:text="@string/activeLevel"
			        android:textColor="@color/black"
			        />
	
	
			</LinearLayout>
			
	
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/corners_row"
		        android:layout_margin="5dp"
		        >
			    <RadioGroup
			        android:id="@+id/radioGroupActiveLevel"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:fadingEdge="none"
			    	android:orientation="horizontal"
			        >
		
				    <RadioButton
				        android:id="@+id/rbLevelLight"
				        android:layout_width="match_parent"
				        android:layout_height="50dp"
				        android:layout_weight="1"
	
				        android:background="@drawable/radio_astab_left_bg"
				        android:textColor="@color/radio_astab_changecolor" 
				        android:button="@null"
				        android:gravity="center_vertical|center_horizontal"
				        android:checked="true"
				        android:text="@string/activeLevelLight" />
				    
				    <RadioButton
				        android:id="@+id/rbLevelMid"
				        android:layout_width="match_parent"
				        android:layout_height="48dp"
				        android:layout_weight="1"
	
				        android:background="@drawable/radio_astab_mid_leftborder"
				        android:textColor="@color/radio_astab_changecolor" 
				        android:button="@null"
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/activeLevelMiddle" />
				    
				    <RadioButton
				        android:id="@+id/rbLevelStrong"
				        android:layout_width="match_parent"
				        android:layout_height="48dp"
				        android:layout_weight="1"
	
				        android:background="@drawable/radio_astab_mid_2sideborder"
				        android:textColor="@color/radio_astab_changecolor" 
				        android:button="@null"
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/activeLevelStrong" />
		
				    <RadioButton
					    android:id="@+id/rbLevelVeryStrong"
					    android:layout_width="match_parent"
					    android:layout_height="50dp"
					    android:layout_weight="1"
	
					    android:textColor="@color/radio_astab_changecolor" 
				        android:button="@null"
				        android:gravity="center_vertical|center_horizontal"
					    android:background="@drawable/radio_astab_right_bg"
					    android:text="@string/activeLevelVeryStrong" 
					    
					    />
				</RadioGroup>
			</LinearLayout>
			
		    		    
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
	
		        android:orientation="horizontal" 
			    >
	
		        <TextView
			        android:id="@+id/tvActiveLevelDescription"
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:layout_gravity="center_vertical"
			        android:layout_marginLeft="10dp"
			        android:gravity="center_vertical"
			        android:text="......"
			        android:textColor="@color/black"
			        />
			</LinearLayout>
			
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
			    android:layout_margin="5dp"
			    >
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:src="@drawable/dri_icon_2x" />



			    <TextView
			        android:id="@+id/tvNutritionDRI"
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:layout_gravity="center_vertical"
			        android:layout_marginLeft="10dp"
			        android:gravity="center_vertical"
			        android:text="@string/nutritionDRI"
			        android:textColor="@color/black"
			        android:textStyle="bold" />


			    
			</LinearLayout>
			
		    <ListView
	            android:id="@+id/listView1"
	            android:layout_width="match_parent"
	            android:layout_height="100dp"
	            android:layout_weight="1" >
	        </ListView>
		    
	
	
	
		</LinearLayout>
	</LinearLayout>
    

</ScrollView>
	
	
	

