<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topBarRLayout"
    android:layout_weight="0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nav_bar_2x" >
    <!-- 
    android:background="@drawable/top_bar"
     -->
    

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/nutritionDiagnose"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_back_bg"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/btnReset"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginRight="10dp"
        
        android:background="@drawable/btn_topright_bg"
        
        android:text="@string/checkAgain"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <!-- 
    android:background="@drawable/btn_3state_bg"
    
    android:background="@drawable/corners_shadow_whiteborder"
     -->

</RelativeLayout>


