<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@drawable/nav_bar_720_104"
    android:orientation="horizontal" 
    >
    
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0"
        android:background="@drawable/btn_back_bg"
        android:gravity="center_vertical"
        android:paddingBottom="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/title_food_combination"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btnTopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0"
        android:background="@drawable/btn_topright_bg"
        android:gravity="center_vertical"
        android:paddingBottom="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/checkAgain"
        android:textColor="@color/white"
        android:textSize="12sp" />
    
</LinearLayout>
    



